Added new files

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="hero" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-			<h1>theJaydip</h1>
-			<p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
+			<h1>Jaydip the Coder</h1>
+			<p>I'm <span class="typed" data-typed-items="Developer, Designer, Freelancer"></span></p>
 			<div class="social-links">
 				<a href="https://twitter.com/thejaydip64" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
 				<a href="https://www.facebook.com/thejaydip" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
