--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>thejaydip - MyResume</title>
-	<meta content="" name="description">
+	<title>thejaydip - CV</title>
+	<meta content="thejaydip - theme & plugin integrator, specialized in WordPress/WooCommerce" name="description">
 	<meta content="thejaydip, jaydip, er jaydip" name="keywords">
 
 	<!-- Favicons -->
@@ -52,7 +52,7 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="hero" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-			<h1>Jaydip the Coder</h1>
+			<h1>Jaydip</h1>
 			<p>I'm <span class="typed" data-typed-items="Developer, Designer, Freelancer"></span></p>
 			<div class="social-links">
 				<a href="https://twitter.com/thejaydip64" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
