--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="hero" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-			<h1>Jaydip</h1>
+			<h1>Jay</h1>
 			<p>I'm <span class="typed" data-typed-items="Developer, Designer, Freelancer"></span></p>
 			<div class="social-links">
 				<a href="https://twitter.com/thejaydip64" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
