--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>thejaydip - CV</title>
+	<title>thejaydip - WordPress Expert</title>
 	<meta content="thejaydip - theme & plugin integrator, specialized in WordPress/WooCommerce" name="description">
 	<meta content="thejaydip, jaydip, er jaydip" name="keywords">
 
