--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>About</h2>
-					<p>PHP web developer and themeforest theme & plugin integrator, specialized in WordPress/WooCommerce customization.</p>
+					<p>PHP web developer and themeforest theme & plugin integrator, specialized in WordPress/WooCommerce customization. I am involved in WordPress community since 2019. I am a Developer, Contributor, Translator.</p>
 				</div>
 				<div class="row">
 					<div class="col-lg-4">
