--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 	<i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 	<!-- ======= Header ======= -->
 	<header id="header" class="d-flex flex-column justify-content-center">
-
 		<nav id="navbar" class="navbar nav-menu">
 			<ul>
 				<li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
@@ -43,7 +42,6 @@
 				<li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 			</ul>
 		</nav><!-- .nav-menu -->
-
 	</header><!-- End Header -->
 
 	<!-- ======= Hero Section ======= -->
@@ -57,6 +55,7 @@
 				<a href="https://www.instagram.com/thejaydip" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
 				<a href="https://twitter.com/thejaydip64" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
 				<a href="https://profiles.wordpress.org/iamjaydip" class="wordpress" target="_blank"><i class="bx bxl-wordpress"></i></a>
+				<a href="https://github.com/thejaydip" class="github" target="_blank"><i class="bx bxl-github"></i></a>
 			</div>
 		</div>
 	</section><!-- End Hero -->
