--- a/index.html
+++ b/index.html
@@ -213,124 +213,139 @@
 				</div>
 				<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.globally.digital" title="Globally Digital" target="_blank">
-							<div class="portfolio-wrap">
-								<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Globally Digital">
-								<div class="portfolio-info">
-									<h4>Globally Digital</h4>
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Globally Digital">
+							<div class="portfolio-info">
+								<h4>Globally Digital</h4>
+								<div class="portfolio-links">
+									<a href="https://www.globally.digital" title="Globally Digital" target="_blank"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
-						</a>
+						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.seventy7group.com" title="Seventy7" target="_blank">
-							<div class="portfolio-wrap">
-								<img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="Seventy7">
-								<div class="portfolio-info">
-									<h4>Seventy7</h4>
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="Seventy7">
+							<div class="portfolio-info">
+								<h4>Seventy7</h4>
+								<div class="portfolio-links">
+									<a href="https://www.seventy7group.com" title="Seventy7" target="_blank"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
-						</a>
+						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.cistec.ch" title="Cistec" target="_blank">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="Cistec">
 							<div class="portfolio-info">
 								<h4>Cistec</h4>
+								<div class="portfolio-links">
+									<a href="https://www.cistec.ch" title="Cistec" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
-						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.trainees.at" title="Trainees" target="_blank">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="Trainees">
 							<div class="portfolio-info">
-								<h4>Trainees.at</h4>								
+								<h4>Trainees.at</h4>
+								<div class="portfolio-links">
+									<a href="https://www.trainees.at" title="Trainees" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
-						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.jefferies-solicitors.com" title="Micheal Jeffries" target="_blank">
+						
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="Micheal Jeffries">
 							<div class="portfolio-info">
 								<h4>Micheal Jeffries</h4>
+								<div class="portfolio-links">
+									<a href="https://www.jefferies-solicitors.com" title="Micheal Jeffries" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
-						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.eagle-education.co.uk" title="Eagle Education" target="_blank">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="Eagle Education">
 							<div class="portfolio-info">
 								<h4>Eagle Education</h4>
+								<div class="portfolio-links">
+									<a href="https://www.eagle-education.co.uk" title="Eagle Education" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
 						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.biotechniques.com" title="Biotechniques" target="_blank">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="Biotechniques">
 							<div class="portfolio-info">
 								<h4>Biotechniques</h4>
+								<div class="portfolio-links">
+									<a href="https://www.biotechniques.com" title="Biotechniques" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
-						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.vandenrecycling.com" title="Vanden Global" target="_blank">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="Vanden Global">
 							<div class="portfolio-info">
 								<h4>Vanden Global</h4>
+								<div class="portfolio-links">
+									<a href="https://www.vandenrecycling.com" title="Vanden Global" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
-						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.silk-insurance.co.uk" title="Silk Insurance" target="_blank">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="Silk Insurance">
 							<div class="portfolio-info">
-								<h4>Silk Insurance</h4>								
+								<h4>Silk Insurance</h4>
+								<div class="portfolio-links">
+									<a href="https://www.silk-insurance.co.uk" title="Silk Insurance" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
 						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.pb.partylite.com" title="Partylite" target="_blank">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Partylite">
 							<div class="portfolio-info">
-								<h4>Partylite</h4>								
+								<h4>Partylite</h4>
+								<div class="portfolio-links">
+									<a href="https://www.pb.partylite.com" title="Partylite" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
-						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.armcodirect.co.uk" title="Armco Direct" target="_blank">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="Armco Direct">
 							<div class="portfolio-info">
-								<h4>Armco Direct</h4>								
+								<h4>Armco Direct</h4>
+								<div class="portfolio-links">
+									<a href="https://www.armcodirect.co.uk" title="Armco Direct" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
-						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<a href="https://www.litho.themezaa.com" title="Litho" target="_blank">
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="Litho">
 							<div class="portfolio-info">
-								<h4>Litho - Multipurpose Elementor Theme</h4>								
+								<h4>Litho - Multipurpose Elementor Theme</h4>
+								<div class="portfolio-links">
+									<a href="https://www.litho.themezaa.com" title="Litho" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
 							</div>
 						</div>
-						</a>
 					</div>
 				</div>
 			</div>
