--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>Skills</h2>
-					<p>6+ years of experience in IT Industry. Highly skilled in plugin & theme integration and customisation in gutenberg, WPbakery page builder and Elementor website builder.</p>
+					<p>8+ years of experience in IT Industry. Highly skilled in plugin & theme integration and customisation in gutenberg, WPbakery page builder and Elementor website builder.</p>
 				</div>
 				<div class="row skills-content">
 					<div class="col-lg-6">
@@ -163,17 +163,17 @@
 						<div class="resume-item">
 							<h4>Bachelor of Engineering</h4>
 							<h5>2010 - 2014</h5>
-							<p><em>Government Engineering College, Modasa, Gujarat</em></p>
+							<p><em>GTU, Ahmedabad, Gujarat</em></p>
 						</div>
 						<div class="resume-item">
 							<h4>HSC</h4>
 							<h5>2009 - 2010</h5>
-							<p><em>R.J. Tanna Prerna Highschool, Bhiloda, Gujarat</em></p>
+							<p><em>GSEB, Gandhinagar, Gujarat</em></p>
 						</div>
 						<div class="resume-item">
 							<h4>SSC</h4>
 							<h5>2008 - 2009</h5>
-							<p><em>R.J. Tanna Prerna Highschool, Bhiloda, Gujarat</em></p>
+							<p><em>GSEB, Gandhinagar, Gujarat</em></p>
 						</div>
 					</div>
 					<div class="col-lg-6">
@@ -399,7 +399,7 @@
 				<a href="https://github.com/thejaydip" class="github" target="_blank"><i class="bx bxl-github"></i></a>
 			</div>
 			<div class="copyright">
-				&copy; Copyright <strong><span>2022</span></strong>. All Rights Reserved
+				&copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved
 			</div>
 			<div class="credits">
 				Designed by <a href="https://www.linkedin.com/in/thejaydip" target="_blank">thejaydip</a>
