--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 							</ul>
 						</div>
 						<div class="resume-item">
-							<h4>WordPress Devloper</h4>
+							<h4>Jr. WordPress Developer</h4>
 							<h5>2015 - 2016</h5>
 							<p><em>Webzlabz Pvt Ltd, Thaltej, Ahmedabad, India</em></p>
 							<ul>
