--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>Skills</h2>
-					<p>8+ years of experience in IT Industry. Highly skilled in plugin & theme integration and customisation in gutenberg, WPbakery page builder and Elementor website builder.</p>
+					<p>9+ years of experience in IT Industry. Highly skilled in plugin & theme integration and customisation in gutenberg, WPbakery page builder and Elementor website builder.</p>
 				</div>
 				<div class="row skills-content">
 					<div class="col-lg-6">
@@ -163,17 +163,17 @@
 						<div class="resume-item">
 							<h4>Bachelor of Engineering</h4>
 							<h5>2010 - 2014</h5>
-							<p><em>GTU, Ahmedabad, Gujarat</em></p>
+							<p><em>GTU, Ahmedabad, GJ</em></p>
 						</div>
 						<div class="resume-item">
 							<h4>HSC</h4>
 							<h5>2009 - 2010</h5>
-							<p><em>GSEB, Gandhinagar, Gujarat</em></p>
+							<p><em>GSEB, Gandhinagar, GJ</em></p>
 						</div>
 						<div class="resume-item">
 							<h4>SSC</h4>
 							<h5>2008 - 2009</h5>
-							<p><em>GSEB, Gandhinagar, Gujarat</em></p>
+							<p><em>GSEB, Gandhinagar, GJ</em></p>
 						</div>
 					</div>
 					<div class="col-lg-6">
@@ -343,6 +343,17 @@
 								<h4>Litho - Multipurpose Elementor Theme</h4>
 								<div class="portfolio-links">
 									<a href="https://www.litho.themezaa.com" title="Litho" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Litho">
+							<div class="portfolio-info">
+								<h4>Crafto - AI-Powered Multipurpose Elementor Theme</h4>
+								<div class="portfolio-links">
+									<a href="https://www.crafto.themezaa.com" title="Litho" target="_blank"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
