--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 	<title>thejaydip - WordPress &amp; WooCommerce Expert</title>
-	<meta content="thejaydip - theme & plugin integrator, specialized in WordPress/WooCommerce" name="description">
-	<meta content="thejaydip, jaydip, er jaydip, iamjaydip" name="keywords">
+	<meta content="thejaydip - theme & plugin integrator, specialized in WordPress, WooCommerce and Elementor" name="description">
+	<meta content="thejaydip, jaydip, erjaydip, iamjaydip" name="keywords">
 
 	<!-- Favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
