--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>About</h2>
-					<p>I'm PHP web developer and themeforest theme & plugin integrator, specialized in WordPress/WooCommerce customization. I'm involved in WordPress community since 2019. I'm a Developer, Contributor, Translator.</p>
+					<p>I'm a PHP web developer and ThemeForest theme/plugin integrator with a focus on WordPress, WooCommerce and Elementor customization. Since 2019, I have been actively contributing to the WordPress ecosystem as a developer, translator, and coding supporter, with a strong focus on clean code, performance, and user-centric solutions.</p>
 				</div>
 				<div class="row">
 					<div class="col-lg-4">
