--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="hero" class="d-flex flex-column justify-content-end justify-content-lg-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-			<h1>Jay</h1>
+			<h1>Jaydip</h1>
 			<p>I'm <span class="typed" data-typed-items="Developer, Designer, Freelancer"></span></p>
 			<div class="social-links">
 				<a href="https://www.linkedin.com/in/thejaydip" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
 				<a href="https://www.facebook.com/thejaydip" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-				<a href="https://www.instagram.com/thejaydip" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
 				<a href="https://twitter.com/thejaydip64" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
 				<a href="https://profiles.wordpress.org/iamjaydip" class="wordpress" target="_blank"><i class="bx bxl-wordpress"></i></a>
 				<a href="https://github.com/thejaydip" class="github" target="_blank"><i class="bx bxl-github"></i></a>
@@ -67,7 +66,7 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>About</h2>
-					<p>I'm a PHP web developer and ThemeForest theme/plugin integrator with a focus on WordPress, WooCommerce and Elementor customization. Since 2019, I have been actively contributing to the WordPress ecosystem as a developer, translator, and coding supporter, with a strong focus on clean code, performance, and user-centric solutions.</p>
+					<p>I'm a PHP web developer and ThemeForest theme/plugin integrator with a focus on WordPress, WooCommerce and Elementor customization. Since 2016, I have been actively contributing to the WordPress ecosystem as a developer, translator, and coding supporter, with a strong focus on clean code, performance, and user-centric solutions.</p>
 				</div>
 				<div class="row">
 					<div class="col-lg-4">
@@ -81,7 +80,7 @@
 						<div class="row profile-details">
 							<div class="col-lg-6">
 								<ul>
-									<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 June 1991</span></li>
+									<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10 July 1993</span></li>
 									<li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:+918141599528" class="phone">+91 8141 599 528</a></span></li>
 									<li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ahmedabad, India</span></li>
 								</ul>
@@ -103,24 +102,24 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>Skills</h2>
-					<p>9+ years of experience in IT Industry. Highly skilled in plugin & theme integration and customisation in gutenberg, WPbakery page builder and Elementor website builder.</p>
+					<p>Highly skilled in plugin & theme integration and customisation in gutenberg, WPbakery page builder and Elementor website builder.</p>
 				</div>
 				<div class="row skills-content">
 					<div class="col-lg-6">
 						<div class="progress">
-							<span class="skill">HTML <i class="val">100%</i></span>
+							<span class="skill">HTML/CSS <i class="val">100%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
 							</div>
 						</div>
 						<div class="progress">
-							<span class="skill">CSS <i class="val">90%</i></span>
+							<span class="skill">GIT/Gulp <i class="val">90%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
 							</div>
 						</div>
 						<div class="progress">
-							<span class="skill">jQuery <i class="val">90%</i></span>
+							<span class="skill">Gutenberg <i class="val">90%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
 							</div>
@@ -431,5 +430,6 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
