--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 	<title>thejaydip - WordPress &amp; WooCommerce Expert</title>
-	<meta content="thejaydip - theme & plugin integrator, specialized in WordPress, WooCommerce and Elementor" name="description">
-	<meta content="thejaydip, jaydip, erjaydip, iamjaydip" name="keywords">
+	<meta name="description" content="thejaydip is a professional theme and plugin integrator, specializing in WordPress, WooCommerce, Elementor, and custom web solutions to enhance your site’s functionality and design.">
+	<meta name="keywords" content="thejaydip, iamjaydip, erjaydip, WordPress development, WooCommerce integration, Elementor expert, theme integrator, plugin integrator, website design, web solutions, custom WordPress plugins, Elementor customization">
 
 	<!-- Favicons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
@@ -66,8 +66,7 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>About</h2>
-					<p>I'm a PHP web developer and ThemeForest theme/plugin integrator with a focus on WordPress, WooCommerce and Elementor customization. Since 2016, I have been actively contributing to the WordPress ecosystem as a developer, translator, and coding supporter, with a strong focus on clean code, performance, and user-centric solutions.</p>
-				</div>
+					<p>I am a skilled PHP web developer and ThemeForest theme/plugin integrator, specializing in WordPress, WooCommerce, and Elementor customization. Since 2016, I’ve been actively contributing to the WordPress ecosystem as a developer, translator, and coding supporter. My focus is on delivering clean, optimized code, improving website performance, and creating user-centric solutions that drive results.</p>				</div>
 				<div class="row">
 					<div class="col-lg-4">
 						<img src="assets/img/profile-img.jpg" class="img-fluid profile-img" alt="">
@@ -75,7 +74,7 @@
 					<div class="col-lg-8 pt-4 pt-lg-0 content">
 						<h3>WordPress &amp; WooCommerce Expert</h3>
 						<p class="fst-italic">
-							Qualified WordPress Developer with extensive background in advanced management processes. Utilises superior communication skills to build meaningful, trusting relationships that exceed client demands.
+							Highly skilled WordPress Developer with expertise in advanced development techniques, custom theme/plugin integration, and project management. Proven track record of utilizing strong communication and collaboration skills to build trusted, long-term client relationships and deliver high-performance, user-centric web solutions that exceed expectations.
 						</p>
 						<div class="row profile-details">
 							<div class="col-lg-6">
@@ -102,7 +101,7 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>Skills</h2>
-					<p>Highly skilled in plugin & theme integration and customisation in gutenberg, WPbakery page builder and Elementor website builder.</p>
+					<p>Experienced in WordPress plugin and theme integration, customization, and development, with expertise in popular page builders such as Gutenberg, WPBakery Page Builder, and Elementor. Specializing in creating responsive, high-performance websites with seamless functionality, optimized user experience, and improved site performance.</p>
 				</div>
 				<div class="row skills-content">
 					<div class="col-lg-6">
@@ -430,6 +429,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
