--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>Resume</h2>
-					<p>I am hardworking and honest person. I have ambitious to work with the IT industry. Always willing to learn new skills and flexible to adapt to the situation.</p>
+					<p>I am a dedicated and reliable IT professional with a strong passion for technology and innovation. Committed to continuous growth, I am always eager to learn new skills and stay ahead of industry trends. With a flexible mindset and the ability to adapt to evolving challenges, I thrive in dynamic environments and am focused on delivering effective solutions.</p>
 				</div>
 				<div class="row">
 					<div class="col-lg-6">
@@ -429,6 +429,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
