--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="Biotechniques">
+							<img src="assets/img/portfolio/screenshot-01.png" class="img-fluid" alt="Biotechniques">
 							<div class="portfolio-info">
 								<h4>Biotechniques</h4>
 								<div class="portfolio-links">
@@ -429,6 +429,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
