--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
 				<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Globally Digital">
+							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Astaniwear">
 							<div class="portfolio-info">
-								<h4>Globally Digital</h4>
+								<h4>Astaniwear</h4>
 								<div class="portfolio-links">
-									<a href="https://www.globally.digital" title="Globally Digital" target="_blank"><i class="bx bx-link"></i></a>
+									<a href="https://www.astaniwear.com/" title="Astaniwear" target="_blank"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -255,7 +255,6 @@
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="Micheal Jeffries">
 							<div class="portfolio-info">
@@ -302,11 +301,11 @@
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="Silk Insurance">
+							<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="Torello">
 							<div class="portfolio-info">
-								<h4>Silk Insurance</h4>
+								<h4>Torello</h4>
 								<div class="portfolio-links">
-									<a href="https://www.silk-insurance.co.uk" title="Silk Insurance" target="_blank"><i class="bx bx-link"></i></a>
+									<a href="https://torello.com" title="Torello" target="_blank"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -314,11 +313,11 @@
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Partylite">
+							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Smith Bros Services Ltd">
 							<div class="portfolio-info">
-								<h4>Partylite</h4>
+								<h4>Smith Bros Services Ltd</h4>
 								<div class="portfolio-links">
-									<a href="https://www.pb.partylite.com" title="Partylite" target="_blank"><i class="bx bx-link"></i></a>
+									<a href="https://www.smithbrosltd.co.uk/" title="Smith Bros Services Ltd" target="_blank"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -340,7 +339,7 @@
 							<div class="portfolio-info">
 								<h4>Litho - Multipurpose Elementor Theme</h4>
 								<div class="portfolio-links">
-									<a href="https://www.litho.themezaa.com" title="Litho" target="_blank"><i class="bx bx-link"></i></a>
+									<a href="https://litho.themezaa.com" title="Litho" target="_blank"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -351,7 +350,18 @@
 							<div class="portfolio-info">
 								<h4>Crafto - AI-Powered Multipurpose Elementor Theme</h4>
 								<div class="portfolio-links">
-									<a href="https://www.crafto.themezaa.com" title="Litho" target="_blank"><i class="bx bx-link"></i></a>
+									<a href="https://crafto.themezaa.com" title="Litho" target="_blank"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Hongo">
+							<div class="portfolio-info">
+								<h4>Hongo - Multipurpose WooCommerce Theme</h4>
+								<div class="portfolio-links">
+									<a href="https://hongo.themezaa.com" title="Hongo" target="_blank"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -429,6 +439,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
