--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<div class="row skills-content">
 					<div class="col-lg-6">
 						<div class="progress">
-							<span class="skill">HTML/CSS <i class="val">100%</i></span>
+							<span class="skill">HTML5/CSS3 <i class="val">100%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
 							</div>
@@ -406,8 +406,7 @@
 
 	<!-- ======= Footer ======= -->
 	<footer id="footer">
-		<div class="container">
-			<h3>thejaydip</h3>
+		<div class="container">			
 			<p>For every problem there is a solution.</p>
 			<div class="social-links">
 				<a href="https://www.linkedin.com/in/thejaydip" class="linkedin"  target="_blank"><i class="bx bxl-linkedin"></i></a>
@@ -439,6 +438,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
