--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -26,9 +25,7 @@
 	<!-- Template Main CSS File -->
 	<link href="assets/css/style.css" rel="stylesheet">
 </head>
-
 <body>
-
 	<!-- ======= Mobile nav toggle button ======= -->
 	<i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 	<!-- ======= Header ======= -->
@@ -43,7 +40,6 @@
 			</ul>
 		</nav><!-- .nav-menu -->
 	</header><!-- End Header -->
-
 	<!-- ======= Hero Section ======= -->
 	<section id="hero" class="d-flex flex-column justify-content-end justify-content-lg-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
@@ -58,9 +54,7 @@
 			</div>
 		</div>
 	</section><!-- End Hero -->
-
 	<main id="main">
-
 		<!-- ======= About Section ======= -->
 		<section id="about" class="about">
 			<div class="container" data-aos="fade-up">
@@ -95,7 +89,6 @@
 				</div>
 			</div>
 		</section><!-- End About Section -->
-
 		<!-- ======= Skills Section ======= -->
 		<section id="skills" class="skills section-bg">
 			<div class="container" data-aos="fade-up">
@@ -147,7 +140,6 @@
 				</div>
 			</div>
 		</section><!-- End Skills Section -->
-
 		<!-- ======= Resume Section ======= -->
 		<section id="resume" class="resume">
 			<div class="container" data-aos="fade-up">
@@ -201,175 +193,198 @@
 				</div>
 			</div>
 		</section><!-- End Resume Section -->
-
 		<!-- ======= Portfolio Section ======= -->
 		<section id="portfolio" class="portfolio section-bg">
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
 					<h2>Portfolio</h2>
-					<p></p>
 				</div>
 				<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Astaniwear">
-							<div class="portfolio-info">
-								<h4>Astaniwear</h4>
-								<div class="portfolio-links">
-									<a href="https://www.astaniwear.com/" title="Astaniwear" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://litho.themezaa.com" title="Litho" target="_blank">
+								<img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="Litho">
+								<div class="portfolio-info">
+									<h4>Litho - Multipurpose Elementor Theme</h4>
+									<div class="portfolio-links"><i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="Seventy7">
-							<div class="portfolio-info">
-								<h4>Seventy7</h4>
-								<div class="portfolio-links">
-									<a href="https://www.seventy7group.com" title="Seventy7" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://crafto.themezaa.com" title="Litho" target="_blank">
+								<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Litho">
+								<div class="portfolio-info">
+									<h4>Crafto - AI-Powered Multipurpose Elementor Theme</h4>
+									<div class="portfolio-links"><i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="Cistec">
-							<div class="portfolio-info">
-								<h4>Cistec</h4>
-								<div class="portfolio-links">
-									<a href="https://www.cistec.ch" title="Cistec" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://hongo.themezaa.com" title="Hongo" target="_blank">
+								<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Hongo">
+								<div class="portfolio-info">
+									<h4>Hongo - Multipurpose WooCommerce Theme</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="Trainees">
-							<div class="portfolio-info">
-								<h4>Trainees.at</h4>
-								<div class="portfolio-links">
-									<a href="https://www.trainees.at" title="Trainees" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://www.astaniwear.com/" title="Astaniwear" target="_blank">
+								<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Astaniwear">
+								<div class="portfolio-info">
+									<h4>Astaniwear</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="Micheal Jeffries">
-							<div class="portfolio-info">
-								<h4>Micheal Jeffries</h4>
-								<div class="portfolio-links">
-									<a href="https://www.jefferies-solicitors.com" title="Micheal Jeffries" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://www.seventy7group.com" title="Seventy7" target="_blank">
+								<img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="Seventy7">
+								<div class="portfolio-info">
+									<h4>Seventy7</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="Eagle Education">
-							<div class="portfolio-info">
-								<h4>Eagle Education</h4>
-								<div class="portfolio-links">
-									<a href="https://www.eagle-education.co.uk" title="Eagle Education" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://www.cistec.ch" title="Cistec" target="_blank">
+								<img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="Cistec">
+								<div class="portfolio-info">
+									<h4>Cistec</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<a href="https://www.trainees.at" title="Trainees" target="_blank">
+								<img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="Trainees">
+								<div class="portfolio-info">
+									<h4>Trainees.at</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<a href="https://www.jefferies-solicitors.com" title="Micheal Jeffries" target="_blank">
+								<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="Micheal Jeffries">
+								<div class="portfolio-info">
+									<h4>Micheal Jeffries</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<a href="https://www.eagle-education.co.uk" title="Eagle Education" target="_blank">
+								<img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="Eagle Education">
+								<div class="portfolio-info">
+									<h4>Eagle Education</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
+								</div>
+							</a>
 						</div>
 						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/screenshot-01.png" class="img-fluid" alt="Biotechniques">
-							<div class="portfolio-info">
-								<h4>Biotechniques</h4>
-								<div class="portfolio-links">
-									<a href="https://www.biotechniques.com" title="Biotechniques" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://www.biotechniques.com" title="Biotechniques" target="_blank">
+								<img src="assets/img/portfolio/screenshot-01.png" class="img-fluid" alt="Biotechniques">
+								<div class="portfolio-info">
+									<h4>Biotechniques</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="Vanden Global">
-							<div class="portfolio-info">
-								<h4>Vanden Global</h4>
-								<div class="portfolio-links">
-									<a href="https://www.vandenrecycling.com" title="Vanden Global" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://www.vandenrecycling.com" title="Vanden Global" target="_blank">
+								<img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="Vanden Global">
+								<div class="portfolio-info">
+									<h4>Vanden Global</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="Torello">
-							<div class="portfolio-info">
-								<h4>Torello</h4>
-								<div class="portfolio-links">
-									<a href="https://torello.com" title="Torello" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://torello.com" title="Torello" target="_blank">
+								<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="Torello">
+								<div class="portfolio-info">
+									<h4>Torello</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 						</a>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Smith Bros Services Ltd">
-							<div class="portfolio-info">
-								<h4>Smith Bros Services Ltd</h4>
-								<div class="portfolio-links">
-									<a href="https://www.smithbrosltd.co.uk/" title="Smith Bros Services Ltd" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://www.smithbrosltd.co.uk/" title="Smith Bros Services Ltd" target="_blank">
+								<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Smith Bros Services Ltd">
+								<div class="portfolio-info">
+									<h4>Smith Bros Services Ltd</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="Armco Direct">
-							<div class="portfolio-info">
-								<h4>Armco Direct</h4>
-								<div class="portfolio-links">
-									<a href="https://www.armcodirect.co.uk" title="Armco Direct" target="_blank"><i class="bx bx-link"></i></a>
+							<a href="https://www.armcodirect.co.uk" title="Armco Direct" target="_blank">
+								<img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="Armco Direct">
+								<div class="portfolio-info">
+									<h4>Armco Direct</h4>
+									<div class="portfolio-links">
+										<i class="bx bx-link"></i>
+									</div>
 								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="Litho">
-							<div class="portfolio-info">
-								<h4>Litho - Multipurpose Elementor Theme</h4>
-								<div class="portfolio-links">
-									<a href="https://litho.themezaa.com" title="Litho" target="_blank"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Litho">
-							<div class="portfolio-info">
-								<h4>Crafto - AI-Powered Multipurpose Elementor Theme</h4>
-								<div class="portfolio-links">
-									<a href="https://crafto.themezaa.com" title="Litho" target="_blank"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Hongo">
-							<div class="portfolio-info">
-								<h4>Hongo - Multipurpose WooCommerce Theme</h4>
-								<div class="portfolio-links">
-									<a href="https://hongo.themezaa.com" title="Hongo" target="_blank"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section><!-- End Portfolio Section -->
-
 		<!-- ======= Contact Section ======= -->
 		<section id="contact" class="contact">
 			<div class="container" data-aos="fade-up">
@@ -403,7 +418,6 @@
 			</div>
 		</section><!-- End Contact Section -->
 	</main><!-- End #main -->
-
 	<!-- ======= Footer ======= -->
 	<footer id="footer">
 		<div class="container">			
@@ -423,7 +437,6 @@
 			</div>
 		</div>
 	</footer><!-- End Footer -->
-
 	<div id="preloader"></div>
 	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
@@ -438,11 +451,3 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
