--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<p>I am a skilled PHP web developer and ThemeForest theme/plugin integrator, specializing in WordPress, WooCommerce, and Elementor customization. Since 2016, I’ve been actively contributing to the WordPress ecosystem as a developer, translator, and coding supporter. My focus is on delivering clean, optimized code, improving website performance, and creating user-centric solutions that drive results.</p>				</div>
 				<div class="row">
 					<div class="col-lg-4">
-						<img src="assets/img/profile-img.jpg" class="img-fluid profile-img" alt="">
+						<img src="assets/img/jaydip-01.jpg" class="img-fluid profile-img" alt="">
 					</div>
 					<div class="col-lg-8 pt-4 pt-lg-0 content">
 						<h3>WordPress &amp; WooCommerce Expert</h3>
@@ -464,4 +464,5 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
