--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://litho.themezaa.com" title="Litho" target="_blank">
-								<img src="assets/img/portfolio/litho.jpg" class="img-fluid" alt="Litho">
+								<img src="assets/img/portfolio/litho.png" class="img-fluid" alt="Litho">
 								<div class="portfolio-info">
 									<h4>Litho - Multipurpose Elementor Theme</h4>
 									<div class="portfolio-links"><i class="bx bx-link"></i>
@@ -215,7 +215,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://crafto.themezaa.com" title="Litho" target="_blank">
-								<img src="assets/img/portfolio/crafto.jpg" class="img-fluid" alt="Litho">
+								<img src="assets/img/portfolio/crafto.png" class="img-fluid" alt="Litho">
 								<div class="portfolio-info">
 									<h4>Crafto - AI-Powered Multipurpose Elementor Theme</h4>
 									<div class="portfolio-links"><i class="bx bx-link"></i>
@@ -227,7 +227,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://hongo.themezaa.com" title="Hongo" target="_blank">
-								<img src="assets/img/portfolio/hongo.jpg" class="img-fluid" alt="Hongo">
+								<img src="assets/img/portfolio/hongo.png" class="img-fluid" alt="Hongo">
 								<div class="portfolio-info">
 									<h4>Hongo - Multipurpose WooCommerce Theme</h4>
 									<div class="portfolio-links">
@@ -240,7 +240,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.astaniwear.com/" title="Astaniwear" target="_blank">
-								<img src="assets/img/portfolio/astaniwear.jpg" class="img-fluid" alt="Astaniwear">
+								<img src="assets/img/portfolio/astaniwear.png" class="img-fluid" alt="Astaniwear">
 								<div class="portfolio-info">
 									<h4>Astaniwear</h4>
 									<div class="portfolio-links">
@@ -266,7 +266,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.cistec.ch" title="Cistec" target="_blank">
-								<img src="assets/img/portfolio/cistec.jpg" class="img-fluid" alt="Cistec">
+								<img src="assets/img/portfolio/cistec.png" class="img-fluid" alt="Cistec">
 								<div class="portfolio-info">
 									<h4>Cistec</h4>
 									<div class="portfolio-links">
@@ -279,7 +279,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.trainees.at" title="Trainees" target="_blank">
-								<img src="assets/img/portfolio/trainees.jpg" class="img-fluid" alt="Trainees">
+								<img src="assets/img/portfolio/trainees.png" class="img-fluid" alt="Trainees">
 								<div class="portfolio-info">
 									<h4>Trainees.at</h4>
 									<div class="portfolio-links">
@@ -292,7 +292,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.jefferies-solicitors.com" title="Micheal Jeffries" target="_blank">
-								<img src="assets/img/portfolio/jefferies.jpg" class="img-fluid" alt="Micheal Jeffries">
+								<img src="assets/img/portfolio/jefferies.png" class="img-fluid" alt="Micheal Jeffries">
 								<div class="portfolio-info">
 									<h4>Micheal Jeffries</h4>
 									<div class="portfolio-links">
@@ -305,7 +305,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.eagle-education.co.uk" title="Eagle Education" target="_blank">
-								<img src="assets/img/portfolio/eagle-education.jpg" class="img-fluid" alt="Eagle Education">
+								<img src="assets/img/portfolio/eagle-education.png" class="img-fluid" alt="Eagle Education">
 								<div class="portfolio-info">
 									<h4>Eagle Education</h4>
 									<div class="portfolio-links">
@@ -332,7 +332,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.vandenrecycling.com" title="Vanden Global" target="_blank">
-								<img src="assets/img/portfolio/vandenrecycling.jpg" class="img-fluid" alt="Vanden Global">
+								<img src="assets/img/portfolio/vandenrecycling.png" class="img-fluid" alt="Vanden Global">
 								<div class="portfolio-info">
 									<h4>Vanden Global</h4>
 									<div class="portfolio-links">
@@ -345,7 +345,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://torello.com" title="Torello" target="_blank">
-								<img src="assets/img/portfolio/torello.jpg" class="img-fluid" alt="Torello">
+								<img src="assets/img/portfolio/torello.png" class="img-fluid" alt="Torello">
 								<div class="portfolio-info">
 									<h4>Torello</h4>
 									<div class="portfolio-links">
@@ -359,7 +359,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.smithbrosltd.co.uk/" title="Smith Bros Services Ltd" target="_blank">
-								<img src="assets/img/portfolio/smithbrosltd.jpg" class="img-fluid" alt="Smith Bros Services Ltd">
+								<img src="assets/img/portfolio/smithbrosltd.png" class="img-fluid" alt="Smith Bros Services Ltd">
 								<div class="portfolio-info">
 									<h4>Smith Bros Services Ltd</h4>
 									<div class="portfolio-links">
@@ -372,7 +372,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.armcodirect.co.uk" title="Armco Direct" target="_blank">
-								<img src="assets/img/portfolio/armcodirect.jpg" class="img-fluid" alt="Armco Direct">
+								<img src="assets/img/portfolio/armcodirect.png" class="img-fluid" alt="Armco Direct">
 								<div class="portfolio-info">
 									<h4>Armco Direct</h4>
 									<div class="portfolio-links">
@@ -385,7 +385,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.tiroler-baumstelle.at" title="Tiroler" target="_blank">
-								<img src="assets/img/portfolio/tiroler.jpg" class="img-fluid" alt="Tiroler">
+								<img src="assets/img/portfolio/tiroler.png" class="img-fluid" alt="Tiroler">
 								<div class="portfolio-info">
 									<h4>Tiroler</h4>
 									<div class="portfolio-links">
@@ -464,5 +464,6 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
