--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 			<p>I'm <span class="typed" data-typed-items="Developer, Designer, Freelancer"></span></p>
 			<div class="social-links">
 				<a href="https://www.linkedin.com/in/thejaydip" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
-				<a href="https://www.facebook.com/thejaydip" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-				<a href="https://twitter.com/thejaydip64" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
 				<a href="https://profiles.wordpress.org/iamjaydip" class="wordpress" target="_blank"><i class="bx bxl-wordpress"></i></a>
 				<a href="https://github.com/thejaydip" class="github" target="_blank"><i class="bx bxl-github"></i></a>
+				<a href="https://www.facebook.com/thejaydip" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+				<a href="https://twitter.com/thejaydip64" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
 			</div>
 		</div>
 	</section><!-- End Hero -->
@@ -63,7 +63,7 @@
 					<p>I am a skilled PHP web developer and ThemeForest theme/plugin integrator, specializing in WordPress, WooCommerce, and Elementor customization. Since 2016, I’ve been actively contributing to the WordPress ecosystem as a developer, translator, and coding supporter. My focus is on delivering clean, optimized code, improving website performance, and creating user-centric solutions that drive results.</p>				</div>
 				<div class="row">
 					<div class="col-lg-4">
-						<img src="assets/img/jaydip-01.jpeg" class="img-fluid profile-img" alt="">
+						<img src="assets/img/jaydip-01.jpeg" class="img-fluid profile-img" alt="Jaydip">
 					</div>
 					<div class="col-lg-8 pt-4 pt-lg-0 content">
 						<h3>WordPress &amp; WooCommerce Expert</h3>
@@ -437,10 +437,10 @@
 			<p>For every problem there is a solution.</p>
 			<div class="social-links">
 				<a href="https://www.linkedin.com/in/thejaydip" class="linkedin"  target="_blank"><i class="bx bxl-linkedin"></i></a>
-				<a href="https://www.facebook.com/thejaydip" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-				<a href="https://twitter.com/thejaydip64" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
 				<a href="https://profiles.wordpress.org/iamjaydip" class="wordpress" target="_blank"><i class="bx bxl-wordpress"></i></a>
 				<a href="https://github.com/thejaydip" class="github" target="_blank"><i class="bx bxl-github"></i></a>
+				<a href="https://www.facebook.com/thejaydip" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+				<a href="https://twitter.com/thejaydip64" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>				
 			</div>
 			<div class="copyright">
 				&copy; Copyright <strong><span>2025</span></strong>. All Rights Reserved
@@ -464,6 +464,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
