--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
 							<a href="https://www.seventy7group.com" title="Seventy7" target="_blank">
-								<img src="assets/img/portfolio/seventy.jpg" class="img-fluid" alt="Seventy7">
+								<img src="assets/img/portfolio/seventy.png" class="img-fluid" alt="Seventy7">
 								<div class="portfolio-info">
 									<h4>Seventy7</h4>
 									<div class="portfolio-links">
@@ -464,6 +464,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
