--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="hero" class="d-flex flex-column justify-content-end justify-content-lg-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-			<h1>Jaydip - Freelance Developer & Designer</h1>
+			<h1>Jaydip</h1>
 			<p>I'm <span class="typed" data-typed-items="Developer, Designer, Freelancer"></span></p>
 			<div class="social-links">
 				<a href="https://www.linkedin.com/in/thejaydip" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
@@ -464,6 +464,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
