--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<section id="hero" class="d-flex flex-column justify-content-end justify-content-lg-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 			<h1>Jaydip</h1>
-			<p>I'm a <span class="typed" data-typed-items="WordPress Specialist, Custom Theme Developer, WooCommerce Expert">WordPress Specialist</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+			<p>I'm a <span class="typed" data-typed-items="WordPress Specialist, Custom Theme Developer, WooCommerce Expert"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
 			<div class="social-links">
 				<a href="https://www.linkedin.com/in/thejaydip" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
 				<a href="https://profiles.wordpress.org/iamjaydip" class="wordpress" target="_blank"><i class="bx bxl-wordpress"></i></a>
@@ -464,6 +464,7 @@
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
